pilot/pkg/proxy/envoy/configdump/testdata/routesdump.json
{
    "@type": "type.googleapis.com/envoy.admin.v2alpha.RoutesConfigDump",
    "staticRouteConfigs": [
        {
            "name": "inbound|9080||details.default.svc.cluster.local",
            "virtualHosts": [
                {
                    "name": "inbound|http|9080",
                    "domains": [
                        "*"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "inbound|9080||details.default.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            },
                            "perFilterConfig": {
                                "mixer": {
                                    "mixer_attributes": {
                                        "attributes": {
                                            "destination.service": {
                                                "string_value": "details.default.svc.cluster.local"
                                            },
                                            "destination.ip": {
                                                "bytes_value": "AAAAAAAAAAAAAP//rB5N8w=="
                                            },
                                            "destination.uid": {
                                                "string_value": "kubernetes://details-v1-9cb87c69-t2fdz.default"
                                            }
                                        }
                                    }
                                }
                            }
                        }
                    ]
                }
            ],
            "validateClusters": false
        },
        {
            "name": "9080",
            "virtualHosts": [
                {
                    "name": "details.default.svc.cluster.local:9080",
                    "domains": [
                        "details.default.svc.cluster.local",
                        "details.default.svc.cluster.local:9080",
                        "details",
                        "details:9080",
                        "details.default.svc.cluster",
                        "details.default.svc.cluster:9080",
                        "details.default.svc",
                        "details.default.svc:9080",
                        "details.default",
                        "details.default:9080",
                        "172.21.104.58",
                        "172.21.104.58:9080"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|9080||details.default.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                },
                {
                    "name": "productpage.default.svc.cluster.local:9080",
                    "domains": [
                        "productpage.default.svc.cluster.local",
                        "productpage.default.svc.cluster.local:9080",
                        "productpage",
                        "productpage:9080",
                        "productpage.default.svc.cluster",
                        "productpage.default.svc.cluster:9080",
                        "productpage.default.svc",
                        "productpage.default.svc:9080",
                        "productpage.default",
                        "productpage.default:9080",
                        "172.21.164.120",
                        "172.21.164.120:9080"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|9080||productpage.default.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                },
                {
                    "name": "ratings.default.svc.cluster.local:9080",
                    "domains": [
                        "ratings.default.svc.cluster.local",
                        "ratings.default.svc.cluster.local:9080",
                        "ratings",
                        "ratings:9080",
                        "ratings.default.svc.cluster",
                        "ratings.default.svc.cluster:9080",
                        "ratings.default.svc",
                        "ratings.default.svc:9080",
                        "ratings.default",
                        "ratings.default:9080",
                        "172.21.243.149",
                        "172.21.243.149:9080"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|9080||ratings.default.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                },
                {
                    "name": "reviews.default.svc.cluster.local:9080",
                    "domains": [
                        "reviews.default.svc.cluster.local",
                        "reviews.default.svc.cluster.local:9080",
                        "reviews",
                        "reviews:9080",
                        "reviews.default.svc.cluster",
                        "reviews.default.svc.cluster:9080",
                        "reviews.default.svc",
                        "reviews.default.svc:9080",
                        "reviews.default",
                        "reviews.default:9080",
                        "172.21.56.133",
                        "172.21.56.133:9080"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|9080||reviews.default.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                }
            ],
            "validateClusters": false
        },
        {
            "name": "80",
            "virtualHosts": [
                {
                    "name": "istio-egressgateway.istio-system.svc.cluster.local:80",
                    "domains": [
                        "istio-egressgateway.istio-system.svc.cluster.local",
                        "istio-egressgateway.istio-system.svc.cluster.local:80",
                        "istio-egressgateway.istio-system",
                        "istio-egressgateway.istio-system:80",
                        "istio-egressgateway.istio-system.svc.cluster",
                        "istio-egressgateway.istio-system.svc.cluster:80",
                        "istio-egressgateway.istio-system.svc",
                        "istio-egressgateway.istio-system.svc:80",
                        "172.21.103.212",
                        "172.21.103.212:80"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|80||istio-egressgateway.istio-system.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                },
                {
                    "name": "istio-ingress.istio-system.svc.cluster.local:80",
                    "domains": [
                        "istio-ingress.istio-system.svc.cluster.local",
                        "istio-ingress.istio-system.svc.cluster.local:80",
                        "istio-ingress.istio-system",
                        "istio-ingress.istio-system:80",
                        "istio-ingress.istio-system.svc.cluster",
                        "istio-ingress.istio-system.svc.cluster:80",
                        "istio-ingress.istio-system.svc",
                        "istio-ingress.istio-system.svc:80",
                        "172.21.171.210",
                        "172.21.171.210:80"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|80||istio-ingress.istio-system.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                },
                {
                    "name": "istio-ingressgateway.istio-system.svc.cluster.local:80",
                    "domains": [
                        "istio-ingressgateway.istio-system.svc.cluster.local",
                        "istio-ingressgateway.istio-system.svc.cluster.local:80",
                        "istio-ingressgateway.istio-system",
                        "istio-ingressgateway.istio-system:80",
                        "istio-ingressgateway.istio-system.svc.cluster",
                        "istio-ingressgateway.istio-system.svc.cluster:80",
                        "istio-ingressgateway.istio-system.svc",
                        "istio-ingressgateway.istio-system.svc:80",
                        "172.21.58.135",
                        "172.21.58.135:80"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                }
            ],
            "validateClusters": false
        },
        {
            "name": "15010",
            "virtualHosts": [
                {
                    "name": "istio-pilot.istio-system.svc.cluster.local:15010",
                    "domains": [
                        "istio-pilot.istio-system.svc.cluster.local",
                        "istio-pilot.istio-system.svc.cluster.local:15010",
                        "istio-pilot.istio-system",
                        "istio-pilot.istio-system:15010",
                        "istio-pilot.istio-system.svc.cluster",
                        "istio-pilot.istio-system.svc.cluster:15010",
                        "istio-pilot.istio-system.svc",
                        "istio-pilot.istio-system.svc:15010",
                        "172.21.245.9",
                        "172.21.245.9:15010"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|15010||istio-pilot.istio-system.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                }
            ],
            "validateClusters": false
        },
        {
            "name": "9093",
            "virtualHosts": [
                {
                    "name": "istio-citadel.istio-system.svc.cluster.local:9093",
                    "domains": [
                        "istio-citadel.istio-system.svc.cluster.local",
                        "istio-citadel.istio-system.svc.cluster.local:9093",
                        "istio-citadel.istio-system",
                        "istio-citadel.istio-system:9093",
                        "istio-citadel.istio-system.svc.cluster",
                        "istio-citadel.istio-system.svc.cluster:9093",
                        "istio-citadel.istio-system.svc",
                        "istio-citadel.istio-system.svc:9093",
                        "172.21.253.193",
                        "172.21.253.193:9093"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|9093||istio-citadel.istio-system.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                },
                {
                    "name": "istio-pilot.istio-system.svc.cluster.local:9093",
                    "domains": [
                        "istio-pilot.istio-system.svc.cluster.local",
                        "istio-pilot.istio-system.svc.cluster.local:9093",
                        "istio-pilot.istio-system",
                        "istio-pilot.istio-system:9093",
                        "istio-pilot.istio-system.svc.cluster",
                        "istio-pilot.istio-system.svc.cluster:9093",
                        "istio-pilot.istio-system.svc",
                        "istio-pilot.istio-system.svc:9093",
                        "172.21.245.9",
                        "172.21.245.9:9093"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|9093||istio-pilot.istio-system.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                },
                {
                    "name": "istio-policy.istio-system.svc.cluster.local:9093",
                    "domains": [
                        "istio-policy.istio-system.svc.cluster.local",
                        "istio-policy.istio-system.svc.cluster.local:9093",
                        "istio-policy.istio-system",
                        "istio-policy.istio-system:9093",
                        "istio-policy.istio-system.svc.cluster",
                        "istio-policy.istio-system.svc.cluster:9093",
                        "istio-policy.istio-system.svc",
                        "istio-policy.istio-system.svc:9093",
                        "172.21.198.176",
                        "172.21.198.176:9093"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|9093||istio-policy.istio-system.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                },
                {
                    "name": "istio-telemetry.istio-system.svc.cluster.local:9093",
                    "domains": [
                        "istio-telemetry.istio-system.svc.cluster.local",
                        "istio-telemetry.istio-system.svc.cluster.local:9093",
                        "istio-telemetry.istio-system",
                        "istio-telemetry.istio-system:9093",
                        "istio-telemetry.istio-system.svc.cluster",
                        "istio-telemetry.istio-system.svc.cluster:9093",
                        "istio-telemetry.istio-system.svc",
                        "istio-telemetry.istio-system.svc:9093",
                        "172.21.39.206",
                        "172.21.39.206:9093"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|9093||istio-telemetry.istio-system.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                }
            ],
            "validateClusters": false
        },
        {
            "name": "15003",
            "virtualHosts": [
                {
                    "name": "istio-pilot.istio-system.svc.cluster.local:15003",
                    "domains": [
                        "istio-pilot.istio-system.svc.cluster.local",
                        "istio-pilot.istio-system.svc.cluster.local:15003",
                        "istio-pilot.istio-system",
                        "istio-pilot.istio-system:15003",
                        "istio-pilot.istio-system.svc.cluster",
                        "istio-pilot.istio-system.svc.cluster:15003",
                        "istio-pilot.istio-system.svc",
                        "istio-pilot.istio-system.svc:15003",
                        "172.21.245.9",
                        "172.21.245.9:15003"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|15003||istio-pilot.istio-system.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                }
            ],
            "validateClusters": false
        },
        {
            "name": "15007",
            "virtualHosts": [
                {
                    "name": "istio-pilot.istio-system.svc.cluster.local:15007",
                    "domains": [
                        "istio-pilot.istio-system.svc.cluster.local",
                        "istio-pilot.istio-system.svc.cluster.local:15007",
                        "istio-pilot.istio-system",
                        "istio-pilot.istio-system:15007",
                        "istio-pilot.istio-system.svc.cluster",
                        "istio-pilot.istio-system.svc.cluster:15007",
                        "istio-pilot.istio-system.svc",
                        "istio-pilot.istio-system.svc:15007",
                        "172.21.245.9",
                        "172.21.245.9:15007"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|15007||istio-pilot.istio-system.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                }
            ],
            "validateClusters": false
        },
        {
            "name": "9091",
            "virtualHosts": [
                {
                    "name": "istio-policy.istio-system.svc.cluster.local:9091",
                    "domains": [
                        "istio-policy.istio-system.svc.cluster.local",
                        "istio-policy.istio-system.svc.cluster.local:9091",
                        "istio-policy.istio-system",
                        "istio-policy.istio-system:9091",
                        "istio-policy.istio-system.svc.cluster",
                        "istio-policy.istio-system.svc.cluster:9091",
                        "istio-policy.istio-system.svc",
                        "istio-policy.istio-system.svc:9091",
                        "172.21.198.176",
                        "172.21.198.176:9091"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|9091||istio-policy.istio-system.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                },
                {
                    "name": "istio-telemetry.istio-system.svc.cluster.local:9091",
                    "domains": [
                        "istio-telemetry.istio-system.svc.cluster.local",
                        "istio-telemetry.istio-system.svc.cluster.local:9091",
                        "istio-telemetry.istio-system",
                        "istio-telemetry.istio-system:9091",
                        "istio-telemetry.istio-system.svc.cluster",
                        "istio-telemetry.istio-system.svc.cluster:9091",
                        "istio-telemetry.istio-system.svc",
                        "istio-telemetry.istio-system.svc:9091",
                        "172.21.39.206",
                        "172.21.39.206:9091"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                }
            ],
            "validateClusters": false
        },
        {
            "name": "15004",
            "virtualHosts": [
                {
                    "name": "istio-policy.istio-system.svc.cluster.local:15004",
                    "domains": [
                        "istio-policy.istio-system.svc.cluster.local",
                        "istio-policy.istio-system.svc.cluster.local:15004",
                        "istio-policy.istio-system",
                        "istio-policy.istio-system:15004",
                        "istio-policy.istio-system.svc.cluster",
                        "istio-policy.istio-system.svc.cluster:15004",
                        "istio-policy.istio-system.svc",
                        "istio-policy.istio-system.svc:15004",
                        "172.21.198.176",
                        "172.21.198.176:15004"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                },
                {
                    "name": "istio-telemetry.istio-system.svc.cluster.local:15004",
                    "domains": [
                        "istio-telemetry.istio-system.svc.cluster.local",
                        "istio-telemetry.istio-system.svc.cluster.local:15004",
                        "istio-telemetry.istio-system",
                        "istio-telemetry.istio-system:15004",
                        "istio-telemetry.istio-system.svc.cluster",
                        "istio-telemetry.istio-system.svc.cluster:15004",
                        "istio-telemetry.istio-system.svc",
                        "istio-telemetry.istio-system.svc:15004",
                        "172.21.39.206",
                        "172.21.39.206:15004"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                }
            ],
            "validateClusters": false
        },
        {
            "name": "9090",
            "virtualHosts": [
                {
                    "name": "prometheus.istio-system.svc.cluster.local:9090",
                    "domains": [
                        "prometheus.istio-system.svc.cluster.local",
                        "prometheus.istio-system.svc.cluster.local:9090",
                        "prometheus.istio-system",
                        "prometheus.istio-system:9090",
                        "prometheus.istio-system.svc.cluster",
                        "prometheus.istio-system.svc.cluster:9090",
                        "prometheus.istio-system.svc",
                        "prometheus.istio-system.svc:9090",
                        "172.21.197.110",
                        "172.21.197.110:9090"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|9090||prometheus.istio-system.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                }
            ],
            "validateClusters": false
        },
        {
            "name": "8060",
            "virtualHosts": [
                {
                    "name": "istio-citadel.istio-system.svc.cluster.local:8060",
                    "domains": [
                        "istio-citadel.istio-system.svc.cluster.local",
                        "istio-citadel.istio-system.svc.cluster.local:8060",
                        "istio-citadel.istio-system",
                        "istio-citadel.istio-system:8060",
                        "istio-citadel.istio-system.svc.cluster",
                        "istio-citadel.istio-system.svc.cluster:8060",
                        "istio-citadel.istio-system.svc",
                        "istio-citadel.istio-system.svc:8060",
                        "172.21.253.193",
                        "172.21.253.193:8060"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|8060||istio-citadel.istio-system.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                }
            ],
            "validateClusters": false
        },
        {
            "name": "8080",
            "virtualHosts": [
                {
                    "name": "istio-pilot.istio-system.svc.cluster.local:8080",
                    "domains": [
                        "istio-pilot.istio-system.svc.cluster.local",
                        "istio-pilot.istio-system.svc.cluster.local:8080",
                        "istio-pilot.istio-system",
                        "istio-pilot.istio-system:8080",
                        "istio-pilot.istio-system.svc.cluster",
                        "istio-pilot.istio-system.svc.cluster:8080",
                        "istio-pilot.istio-system.svc",
                        "istio-pilot.istio-system.svc:8080",
                        "172.21.245.9",
                        "172.21.245.9:8080"
                    ],
                    "routes": [
                        {
                            "match": {
                                "prefix": "/"
                            },
                            "route": {
                                "cluster": "outbound|8080||istio-pilot.istio-system.svc.cluster.local"
                            },
                            "decorator": {
                                "operation": "default-route"
                            }
                        }
                    ]
                }
            ],
            "validateClusters": false
        }
    ]
}
